GNOME Bugzilla – Bug 623274
include proxy name in releated errors
Last modified: 2010-07-30 14:30:48 UTC
In the gstreamer souphttp source we log errors. The messages we get from libsoup are a bit sparse in detail. See this example: gst_soup_http_src_response_cb:<source> got response 3: Cannot resolve proxy hostname gst_soup_http_src_parse_status:<source> error: Cannot resolve proxy hostname gst_soup_http_src_parse_status:<source> error: libsoup status code 3 it would be nice to have the actual proxyname included in the messages. E.g. I have turn the proxy off in the gnome settings and no http_proxy env var set. Still apparently the use of a proxy is tried. This would be easier to debug, if the settings that libsoup attempts to use would be shown. This is on gnome 2.30.
so is this just for debugging or do you plan to show that string to the user? currently msg->reason_phrase is always unlocalized (since normally it comes from the HTTP server, and HTTP more or less only allows those messages to be in English), but I guess we could localize the non-HTTP ones (SOUP_STATUS_IS_TRANSPORT_ERROR(msg->status_code)).
Yes, its just for the debugging. It like like "file not found" is most useful when it also tells what file it tried to access.
fixed to include the hostname for both proxy and destination host-related errors