Put the hostname into the reason_phrase with network errors

eg, "Cannot resolve hostname (sadfasdfasdfasdf.com)"

This can be useful for debugging.

https://bugzilla.gnome.org/show_bug.cgi?id=623274